2002-03-10  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (is_still_feasible): Wrote.
	(calculate_limits): Wrote.
	(solver): Finished the limits reporting.

	* reports.c (solver_program_report): Implemented the program
	report generation.  Gives the LP program in math form.
	(solver_limits_report): Implemented.

	* solver.c: Related changes.
	
2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (solver_program_report): Renamed as
	solver_performance_report.  Added stubs for solver_program_report
	and solver_dual_program_report.

	* reports.c (solver_answer_report): Fix the final value of
	obj. fn. reporting in the case where the target cell has a
	constant increment.
	(solver_limits_report): Ditto.

	* solver.c (solver_results_free): Plugged a leak.
	(solver): Plugged a leak.
	(check_program_definition_failures): Remove list inverting.
	(lp_solver_init): Fixed the index of the column.

2002-03-08  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* reports.c (solver_lp_reports): Do not generate sensitivity and
	limits reports if the problem is MILP or ILP.

	* solver.c (solver): Fetch the results only if the solver found a
	proper sollution.
	(solver): Measure the real time elapsed by the solving stage.

	* reports.c (solver_program_report): Made the format of the ratios
	to be percentages.

2002-03-07  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.c (lp_solver_init): Made to use API calls instead of
	using direct calls to LP Solve.

	* reports.c (solver_program_report): Added non-zeros statistics for the
	objective fn as well.
	(fill_header_titles): Added filename to be printed as well.

	* reports.c (solver_limits_report): Implemented the initial limits
	reporting.
	(solver_program_report): Implemented the program statistics
	reporting.

2002-03-06  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* lp_solve: Imported.

	* solver.c, reports.c: Split the src/solver-lp.c into two parts
	and moved here.
